<resources>
    <string name="app_name">Themenschädel</string>
    <string name="settings">Einstellungen</string>
    <string name="search">Suche</string>
    <string name="info">Info</string>
    <string name="suggested_by">Vorgeschlagen von</string>
    <string name="boys">Jungs</string>
    <string name="guests">Gäste</string>
    <string name="ad">Werbung</string>
    <string name="filter_date">Datum</string>
    <string name="filter_title">Titel</string>
    <string name="filter_user">User</string>
    <string name="filter_state">Status</string>
    <string name="filter_number">Folge</string>
    <string name="filter_name">Name</string>
    <string name="filter_time">Zeit</string>
    <string name="filter_sorted_by">Sortieren nach</string>
    <string name="filter_filter_by">Filtern nach</string>
    <string name="filter_show_details">Details anzeigen</string>
    <string name="filter_show_state">Episodenstatus anzeigen</string>
    <string name="persons_in_episode">Personen in einer Folge</string>
    <string name="state_of_episode">Folgen mit dem Status</string>
    <string name="podcast_no_episodes">Keine Folgen gefunden</string>
    <string name="podcast_number_dummy">Folge 220</string>
    <string name="podcast_length_dummy">1h 5min</string>
    <string name="podcast_date_dummy">9. Mai 2021</string>
    <string name="podcast_vote_dummy">0</string>
    <string name="podcast_title_dummy">Flos biodesintegrierender China-Rollrasen des Todes!</string>
    <string name="podcast_episode">Folge</string>
    <string name="podcast">Podcast</string>
    <string name="topic">Themen</string>
    <string name="wiki">Wiki</string>
    <string name="login_register">Login / Register</string>
    <string name="logout">Logout</string>
    <string name="open">Drawer öffnen</string>
    <string name="close">Drawer schließen</string>
    <string name="anonym">360er</string>
    <string name="list">Liste</string>
    <string name="draw">Ziehen</string>
    <string name="profile_name_dummy">Username</string>
    <string name="profile_email_dummy">user@gmail.com</string>
    <string name="profile_name_autofill">Dein Benutzername</string>
    <string name="profile_email_autofill">Deine E-Mail</string>
    <string name="profile_password_autofill">Dein Passwort</string>
    <string name="profile_name_hint">Benutzername</string>
    <string name="profile_email_hint">E-Mail</string>
    <string name="profile_password_hint">Passwort</string>
    <string name="profile_role_user">User</string>
    <string name="profile_role_mod">Moderator</string>
    <string name="profile_role_admin">Admin</string>
    <string name="profile_role_froid">Froid</string>
    <string name="profile_platform">Bevorzugte Platform</string>
    <string name="profile_hosts_in">muss fix dabei sein</string>
    <string name="profile_hosts_out">soll nicht dabei sein</string>
    <string name="profile_episode_length">Länge</string>
    <string name="profile_random">Egal</string>
    <string name="profile_mind_1_topic">Hat mindestens 1</string>
    <string name="profile_topic">Thema</string>
    <string name="profile_no_ads">Hat keine Werbung</string>
    <string name="profile_play_random">Zufällige Folge abspielen</string>
    <string name="profile_cancel_episode">Folge immer ausschließen</string>
    <string name="profile_search_again">Erneut suchen</string>
    <string name="profile_play_episode">Folge abspielen</string>
    <string name="profile_change_filter">Filter umstellen</string>
    <string name="profile_delete_history">Verlauf löschen</string>
    <string-array name="profile_lists_array">
        <item>Lieblingsfolgen</item>
        <item>Gezogene Folgen</item>
        <item>Gezogene Themen</item>
    </string-array>
    <string name="saved_display_type">saved_display_type</string>
    <string name="saved_episodeCount">saved_episodeCount</string>
    <string name="saved_topicCount">saved_episodeCount</string>
    <string name="dialog_to_episode_text">zur Folge</string>
    <string name="dialog_info_community">Community</string>
    <string name="dialog_info_community_subtitle">Ein Thema, welches von der Community vorgeschlagen wurde.</string>
    <string name="dialog_info_boys_subtitle">Ein Thema, welches von einer (oder mehreren) der Jungs vorgeschlagen wurde</string>
    <string name="dialog_info_ad_subtitle">Dies ist kein Thema, sondern eine Werbeeinblendung</string>
    <string name="dialog_info_suggestion">Vorgeschlagen</string>
    <string name="dialog_info_open">Offen</string>
    <string name="dialog_info_discussed">Besprochen</string>
    <string name="dialog_info_rejected">Abgelehnt</string>
    <string name="dialog_info_suggestion_subtitle">Die Community hat das Thema eingereicht, es wurde jedoch noch nicht von den Jungs angenommen / abgelehnt</string>
    <string name="dialog_info_open_subtitle">Ein angenommenes Thema, dass jedoch noch nicht von den Jungs gezogen wurde.</string>
    <string name="dialog_info_discussed_subtitle">Ein Thema, dass bereits gezogen und von den Jungs besprochen wurde</string>
    <string name="dialog_info_rejected_subtitle">Ein von der Community vorgeschlagenes Thema, welches die Jungs abgelehnt haben</string>
    <string name="dialog_info_anonym">Anonym</string>
    <string name="dialog_info_anonym_state">Du bist derzeit ein Betrachter.</string>
    <string name="dialog_info_rights_title">Du kannst:</string>
    <string name="dialog_info_rights_subtitle">Alles anschauen und lesen.</string>
    <string name="dialog_info_no_rights_title_1">Du kannst</string>
    <string name="dialog_info_no_rights_title_2">NICHT:</string>
    <string name="dialog_info_no_rights_subtitle">Die Einstellungsmöglichkeiten in der App benutzen.</string>
    <string name="dialog_info_user">User</string>
    <string name="dialog_info_user_state">Du bist derzeit eingeloggt :)</string>
    <string name="dialog_info_user_hello">Hallo</string>
    <string name="dialog_info_anonym_subtitle">Kann alles anschauen und lesen</string>
    <string name="dialog_info_user_subtitle">Hat mehrere Einstellungsmöglichkeiten in der App</string>
    <string name="dialog_info_mod_subtitle">Können Themen verifizieren</string>
    <string name="dialog_info_register_change">Du willst das ändern?</string>
    <string name="dialog_info_register">Registiere dich hier</string>
    <string name="list_item_topic_title_dummy">Schwert oder Axt</string>
    <string name="list_item_topic_time_dummy">00:04:50</string>
    <string name="list_item_topic_number_dummy">Nr. 120</string>
    <string name="list_item_topic_number">Nr.</string>
    <string name="episode_hosts_and_guests">Hosts &amp; Gäste</string>
    <string name="episode_edited_by">Bearbeitet von:</string>
    <string name="state_closed">Abgeschlossen</string>
    <string name="state_unverified">Unverified</string>
    <string name="state_claimed">Claimed</string>
    <string name="state_open">Offen</string>
    <string name="episode_no_topics">Bei dieser Folge wurden noch keine Themen eingetragen.</string>
    <string name="episode_favorite">Lieblingsfolge</string>
    <string name="required_field">Pflichtfeld!</string>
    <string name="password_length">Dein Passwort muss mindestens 6 Zeichen haben!</string>
    <string name="successful_login">Erfolgreich eingeloggt :)</string>
    <string name="successful_register">Erfolgreich registriert und eingeloggt :)</string>
    <string name="authentification_error">Ups! Da ist was schief gelaufen. Überprüfe dein Passwort und deinen Benutzernamen</string>
    <string name="login">Login</string>
    <string name="login_register_1">Noch kein Konto?</string>
    <string name="login_register_link">Hier</string>
    <string name="login_register_2">registrieren</string>
    <string name="login_hello">Hallo 360er!</string>
    <string name="login_username_hint">Gib deinen Benutzername ein</string>
    <string name="login_password_hint">Gib dein Passwort ein</string>
    <string name="login_password_again_hint">Wiederhole dein Passwort</string>
    <string name="login_choosen_platform">Bevorzugte Platform</string>
    <string name="login_mail_hint">Gib deine E-Mail Adresse ein</string>
    <string name="saved_filter_type_podcast">saved_filter_type_podcast</string>
    <string name="saved_filter_type_list">saved_filter_type_list</string>
    <string name="search_hint">Suche nach Folgen</string>
    <string name="saved_first_start">saved_first_start</string>
    <string name="saved_user_role">saved_user_role</string>
    <string name="toast">Saved meta - this should be displayed once</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_finished">Refresh abgeschlossen</string>
    <string name="filter_persons">Person</string>
    <string name="filter">Filtern</string>
    <string name="subtopics">Subthemen</string>
    <string name="dialog_info_list_subtitle">Ein Thema, welches Unterthemen besitzt</string>
    <string name="register_login_1">Schon registriert?</string>
    <string name="register_login_2">zum Login</string>
    <string name="contentDescription_split">feiner Strich</string>
    <string name="contentDescription_display">Anzeigeart - groß, mittel oder klein</string>
    <string name="contentDescription_card">Abgerundetes Rechteck mit leichtem Schatten</string>
    <string name="contentDescription_podcast_image">Bild der Podcastfolge</string>
    <string name="contentDescription_profile_role">Das Icon deiner Rolle, welche deine Benutztungsrechte der App widerspiegelt.</string>
    <string name="contentDescription_profile_field_background">Kreis hinter dem Profilbild</string>
    <string name="contentDescription_background">Hintergrund</string>
    <string name="contentDescription_divider">Trennstrich</string>
    <string name="contentDescription_profile_image">Profilbild</string>
    <string name="contentDescription_profile_platform_user">"Icon, das die bevorzugte Plattform des Users darstellt."</string>
    <string name="contentDescription_icon_community_boys">"Icon, das zeigt wer das Thema vorgeschlagen hat."</string>
    <string name="contentDescription_icon_community">Ein Symbol mit 2 Menschen.</string>
    <string name="contentDescription_icon_boys">Ein Symbol mit einer Person</string>
    <string name="contentDescription_icon_ad">Ein Symbol eines Einkaufswagens</string>
    <string name="contentDescription_icon_suggested">Zwei Kreise nebeneinander. In dem 2. ist ein Plus.</string>
    <string name="contentDescription_icon_open">Ein leerer Kreis</string>
    <string name="contentDescription_icon_discussed">Ein Kreis mit einem Häckchen in der Mitte</string>
    <string name="contentDescription_icon_rejected">Ein durchgestrichener Kreis</string>
    <string name="contentDescription_curve">Eine wellenartige Form, die einen Verlauf hat</string>
    <string name="contentDescription_curve_top_shadow">Der Schatten der oberen Wellenform</string>
    <string name="contentDescription_curve_bottom_shadow">Der Schatten der oberen Wellenform</string>
    <string name="contentDescription_card_button">Ein großer abgerundeter Button</string>
    <string name="contentDescription_filter">Eine Lupe die vor einem Text ist. Der Text wird durch Linien dargestellt.</string>
    <string name="contentDescription_line">Eine vertikale Linie</string>
    <string name="contentDescription_undeline">Eine Unterstrich</string>
    <string name="contentDescription_list_item_icon">Ein Symbol das entweder eine Person zeigt und dafür steht, dass dieses Thema von den Jungs kam, oder 2 Personen hintereinander, was dafür steht, dass das Thema von der Community vorgeschlagen wurde.</string>
    <string name="contentDescription_arrow_right">Ein Pfeil der nach rechts zeigt, durch Klicken öffnen sich die Sub-Themen, falls vorhanden.</string>
    <string name="contentDescription_spotify">Spotify icon</string>
    <string name="contentDescription_icon_list">Ein Symbol für eine Aufzählungsliste</string>
</resources>