<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_podcast"
            android:icon="@drawable/ic_podcast"
            android:title="@string/podcast" />
        <item
            android:id="@+id/menu_topic"
            android:icon="@drawable/ic_topic"
            android:title="@string/topic" />
        <item
            android:id="@+id/menu_wiki"
            android:icon="@drawable/ic_wiki"
            android:title="@string/wiki" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/menu_login"
                android:icon="@drawable/ic_login"
                android:title="@string/login_register"/>
    </group>

</menu>