<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/ic_podcast"
            android:title="@string/podcast" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_topic"
            android:title="@string/topic" />
    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login_register" />
    </group>
</menu>