<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_info_topic_layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_info_topic_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_card"
        android:contentDescription="@string/contentDescription_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dialog_info_ep_types_title"
        style="@style/Dialog.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/suggested_by"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_begin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_info_ep_types_boys_details"
        style="@style/Dialog.Details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/dialog_info_boys_subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_info_topic_background"
        app:layout_constraintEnd_toEndOf="@+id/dialog_info_ep_types_comm_details"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_boys"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_boys" />

    <TextView
        android:id="@+id/dialog_info_ep_types_boys"
        style="@style/Dialog.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/boys"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_comm_details"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_comm_details" />

    <TextView
        android:id="@+id/dialog_info_ep_types_list"
        style="@style/Dialog.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subtopics"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_boys_details"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_title" />

    <TextView
        android:id="@+id/dialog_info_ep_types_comm_details"
        style="@style/Dialog.Details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_info_community_subtitle"
        app:layout_constraintEnd_toStartOf="@+id/dialog_info_ep_types_end"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_community"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_community" />

    <TextView
        android:id="@+id/dialog_info_ep_types_community"
        style="@style/Dialog.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_info_community"
        app:layout_constraintStart_toEndOf="@+id/dialog_info_ep_types_comm_icon"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_list_details" />

    <ImageView
        android:id="@+id/dialog_info_ep_types_comm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_community"
        android:contentDescription="@string/contentDescription_icon_community"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_info_ep_types_community"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_title"
        app:layout_constraintTop_toTopOf="@+id/dialog_info_ep_types_community" />

    <TextView
        android:id="@+id/dialog_info_ep_types_list_details"
        style="@style/Dialog.Details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_info_list_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/dialog_info_ep_types_comm_details"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_boys"
        app:layout_constraintTop_toBottomOf="@+id/dialog_info_ep_types_list" />

    <ImageView
        android:id="@+id/dialog_info_ep_types_boys_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_boys"
        android:contentDescription="@string/contentDescription_icon_boys"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_info_ep_types_boys"
        app:layout_constraintEnd_toEndOf="@+id/dialog_info_ep_types_comm_icon"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_comm_icon"
        app:layout_constraintTop_toTopOf="@+id/dialog_info_ep_types_boys" />

    <ImageView
        android:id="@+id/dialog_info_ep_types_list_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_subtopics"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/contentDescription_icon_list"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_info_ep_types_list"
        app:layout_constraintEnd_toEndOf="@+id/dialog_info_ep_types_comm_icon"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_ep_types_comm_icon"
        app:layout_constraintTop_toTopOf="@+id/dialog_info_ep_types_list" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_info_ep_types_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_info_ep_types_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>